--- a/package.json
+++ b/package.json
@@ -19,5 +19,18 @@
   "bugs": {
     "url": "https://github.com/gl-vis/gl-scatter2d-fancy/issues"
   },
-  "homepage": "https://github.com/gl-vis/gl-scatter2d-fancy#readme"
+  "browserify": {
+    "transform": [
+      "glslify"
+    ]
+  },
+  "homepage": "https://github.com/gl-vis/gl-scatter2d-fancy#readme",
+  "dependencies": {
+    "gl-buffer": "^2.1.2",
+    "gl-shader": "^4.0.5",
+    "glslify": "^2.3.1",
+    "text-cache": "^4.0.0",
+    "typedarray-pool": "^1.1.0",
+    "vectorize-text": "^3.0.2"
+  }
 }
