--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gl-scatter2d-fancy",
-  "version": "1.1.3",
+  "version": "1.2.0",
   "description": "Fancy and slow scatter plots",
   "main": "scatter-fancy.js",
   "scripts": {
@@ -15,6 +15,7 @@
     "plot"
   ],
   "author": "Mikola Lysenko",
+  "contributors": ["Étienne Tétreault-Pinard", "Robert Monfera"],
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/gl-vis/gl-scatter2d-fancy/issues"
