--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
     "plot"
   ],
   "author": "Mikola Lysenko",
-  "contributors": ["Étienne Tétreault-Pinard", "Robert Monfera"],
+  "contributors": [
+    "Étienne Tétreault-Pinard",
+    "Robert Monfera"
+  ],
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/gl-vis/gl-scatter2d-fancy/issues"
@@ -27,11 +30,11 @@
   },
   "homepage": "https://github.com/gl-vis/gl-scatter2d-fancy#readme",
   "dependencies": {
+    "font-atlas-sdf": "^1.0.0",
     "gl-buffer": "^2.1.2",
     "gl-shader": "^4.2.1",
+    "gl-texture2d": "^2.1.0",
     "glslify": "^2.3.1",
-    "text-cache": "^4.0.0",
-    "typedarray-pool": "^1.1.0",
-    "vectorize-text": "^3.0.2"
+    "typedarray-pool": "^1.1.0"
   }
 }
