--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   },
   "homepage": "https://github.com/gl-vis/gl-scatter2d-fancy#readme",
   "dependencies": {
+    "color-id": "^1.0.0",
     "font-atlas-sdf": "^1.0.0",
     "gl-buffer": "^2.1.2",
     "gl-shader": "^4.2.1",
