--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "gl-shader": "^4.2.1",
     "gl-texture2d": "^2.1.0",
     "glslify": "^2.3.1",
+    "snap-points-2d": "^3.1.0",
     "typedarray-pool": "^1.1.0"
   }
 }
