--- a/package.json
+++ b/package.json
@@ -40,5 +40,14 @@
     "glslify": "^2.3.1",
     "snap-points-2d": "^3.1.0",
     "typedarray-pool": "^1.1.0"
+  },
+  "devDependencies": {
+    "gl-spikes2d": "^1.0.1",
+    "gl-select-box": "^1.0.1",
+    "canvas-fit": "^1.5.0",
+    "fps-indicator": "^1.0.2",
+    "gl-plot2d": "^1.2.0",
+    "mouse-change": "^1.4.0",
+    "mouse-wheel": "^1.2.0"
   }
 }
